getting sarted last time

--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -3,8 +3,9 @@
 }
 
 body {
-    background-color: rgb(129, 129, 129);
+    background-color: rgb(118, 118, 118);
     font-family: lato, sans-serif;
+    color: antiquewhite;
 }
 
 h1,
