--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,3 +18,4 @@
 @import './cmps/book-preview.css';
 @import './cmps/book-filter.css';
 @import './cmps/long-text.css';
+@import './cmps/email-cmps-styels/email-preview.css';
