--- a/assets/css/pages/keep/NotePreview.css
+++ b/assets/css/pages/keep/NotePreview.css
@@ -18,6 +18,7 @@
 .note-preview-control-panel button,
 .note-todo-list button,
 .note-edit-btn-container button {
+  font-family: fa-solid;
   background-color: inherit;
   outline: none;
   border: none;
