--- a/assets/css/cmps/book-preview.css
+++ b/assets/css/cmps/book-preview.css
@@ -1,10 +1,19 @@
 .book-preview {
-    height: 350px;
+    /* height: 350px; */
     width: 250px;
     padding: 10px 0px 10px;
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.457);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden
 }
 
 .book-preview .img-container {
     max-width: 200px;
+}
+.book-preview h3{
+    width: 250px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden
 }
