--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -19,6 +19,8 @@
 @import './cmps/book-filter.css';
 @import './cmps/long-text.css';
 @import './cmps/email-cmps-styels/email-preview.css';
+@import './cmps/email-cmps-styels/email-compose.css';
+@import './cmps/email-cmps-styels/email-list.css';
 
 /* keep imports */
 @import './pages/keep/NoteApp.css';
