--- a/assets/css/cmps/email-cmps-styels/email-status.css
+++ b/assets/css/cmps/email-cmps-styels/email-status.css
@@ -1,4 +1,4 @@
-.email-list .add-email {
+.email-status .add-email {
 	box-shadow:inset 0px 1px 0px 0px #54a3f7;
 	background: #8b00a7 ;
 	background-color:#8b00a7;
@@ -13,7 +13,7 @@
 	text-decoration:none;
 	text-shadow:0px 1px 0px #154682;
 }
-.email-list .add-email:hover {
+.email-status .add-email:hover {
 	background:#5c006f;
 	background-color:#66007b;
 }
