--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    background-color: rgb(118, 118, 118);
+    background-color: #fff;
     font-family: lato, sans-serif;
     color: antiquewhite;
 }
