--- a/assets/css/pages/keep/CreateNote.css
+++ b/assets/css/pages/keep/CreateNote.css
@@ -3,8 +3,9 @@
   padding: 0.5rem 0;
   background-color: #fff;
   flex-direction: column;
-  border-radius: 3px;
+  border-radius: 8px;
   box-shadow: 0 0 5px #7a7a7a;
+  justify-content: space-between;
 }
 
 .note-create input {
@@ -12,6 +13,7 @@
   border: none;
   padding-left: 10px;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 .note-create button {
@@ -45,6 +47,9 @@
 @media (min-width: 640px) {
   .note-create {
     flex-direction: row;
-    width: 600px;
+    /* width: 600px; */
+  }
+  .note-create input{
+    text-align: left;
   }
 }
