--- a/assets/css/pages/keep/NoteList.css
+++ b/assets/css/pages/keep/NoteList.css
@@ -8,6 +8,13 @@
   margin-bottom: 10px;
 }
 
+.note-list h4 {
+  color: black;
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+  text-decoration: underline;
+}
+
 /* MEDIA QUERIES */
 /* MEDIUM */
 @media (min-width: 640px) {
