--- a/assets/css/basics/helpers.css
+++ b/assets/css/basics/helpers.css
@@ -29,15 +29,23 @@
 }
 
 .app-header{
-    background:linear-gradient(320deg, #410093, #735b91);
+    /* background:linear-gradient(320deg, #410093, #735b91); */
 }
 
 .YAWHO{
         font-family: YAWHO;
         font-size: 1.8rem;
+        color: white;
 }
 
 
 .active {
-    color: red;
+    text-shadow: 0px 0px 6px #5ab0de;
+    color: #5ab0de;
 }
+
+@media (max-width: 640px) {
+    .app-header {
+        flex-direction: column;
+    }
+  }
