--- a/assets/css/pages/keep/cmps/app-header.css
+++ b/assets/css/pages/keep/cmps/app-header.css
@@ -2,10 +2,13 @@ header {
   background-color: #400090	;
   height: 80px;
   font-weight: bold;
+  color: white;
 }
 
 header nav,
 header nav ul {
+  color: white;
+  padding: 15px;
   height: 100%;
 }
 
@@ -19,4 +22,10 @@ a:hover {
 
 li a.active {
   border-bottom: 2px solid rgb(5, 98, 247);
+}
+
+@media (max-width: 640px) {
+  header nav {
+display: inline-block;    
+  }
 }
