--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,8 @@
 @import './cmps/book-preview.css';
 @import './cmps/book-filter.css';
 @import './cmps/long-text.css';
+@import './cmps/email-cmps-styels/email-app.css';
+@import './cmps/email-cmps-styels/email-list.css';
 @import './cmps/email-cmps-styels/email-preview.css';
 @import './cmps/email-cmps-styels/email-compose.css';
 @import './cmps/email-cmps-styels/email-status.css';
