--- a/assets/css/pages/keep/NoteApp.css
+++ b/assets/css/pages/keep/NoteApp.css
@@ -1,5 +1,8 @@
 .note-app {
-  /* background-color: rgb(157, 250, 128); */
+  background-color: rgba(249, 249, 249, 0.475);
   height: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  color: black;
   /* background-color: #202124; */
 }
