--- a/assets/css/cmps/email-cmps-styels/email-compose.css
+++ b/assets/css/cmps/email-cmps-styels/email-compose.css
@@ -1,6 +1,33 @@
 
 
 .email-compose textarea{
+
     resize: none;
+
+}
+
+.email-compose{
+    margin: 20px;
+    width: 40%;
+    /* background: none; */
+    /* background-color: #fff; */
+    border-radius: 6px;
+    position: fixed;
+    bottom: -3%;
+    left: 10%;
+    /* transform: translate(-50%,50%); */
+}
+
+.send-email-btn{
+    color: white;
+background-color: #188fff;
+}
+
+.delete-email-btn{
+    width: 40px;
+    border: solid gray 1px; 
+    border-bottom: none;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 
 }
