--- a/assets/css/cmps/email-cmps-styels/email-status.css
+++ b/assets/css/cmps/email-cmps-styels/email-status.css
@@ -2,11 +2,27 @@
 	display: flex;
 	flex-direction: column;
 }
+.email-status-btn{
+	color: white;
+	border: none;
+	background: none;
+	text-align: left;
+    height: auto;
+	padding: 5px;
+}
+
+.email-status-btn:hover{
+	background-color: rgba(128, 128, 128, 0.486);
+}
+
+ .email-status-btn .active{
+	color: red;
+}
 
 .email-status .add-email {
-	background: #8b00a7 ;
-	background-color:#8b00a7;
-	border-radius:3px;
+    background-color: #188fff;
+	border-radius:1px;
+	margin-bottom: 10px;
 	border:1px solid #631277;
 	display:inline-block;
 	cursor:pointer;
@@ -18,6 +34,5 @@
 	text-shadow:0px 1px 0px #154682;
 }
 .email-status .add-email:hover {
-	background:#5c006f;
-	background-color:#66007b;
+	box-shadow: 4px 4px 4px -1px rgba(0,0,0,0.5);
 }
