--- a/assets/css/cmps/email-cmps-styels/email-app.css
+++ b/assets/css/cmps/email-cmps-styels/email-app.css
@@ -1,7 +1,8 @@
 .email-app{
     display: flex;
     flex-direction: column;
-justify-content: left;
+    justify-content: left;
+    background-color: rgba(63, 63, 63, 0.637);
 }
 
 .email-body{
@@ -9,6 +10,15 @@ justify-content: left;
     padding: 15px;
     margin: 0%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     background-color: rgba(63, 63, 63, 0.637);
 }
+
+@media (min-width: 970px) {
+    .email-body {
+        flex-direction: row;
+    }
+    .email-app{
+        flex-wrap: wrap;
+    }
+  }
