--- a/assets/css/pages/keep/NotePreview.css
+++ b/assets/css/pages/keep/NotePreview.css
@@ -11,6 +11,13 @@
   margin-bottom: 15px;
 /* box-shadow: 4px 4px 4px -1px rgba(0,0,0,0.5); */
 }
+.note-preview-control-panel{
+  visibility: hidden;
+}
+
+.note-preview:hover .note-preview-control-panel{
+  visibility: visible;
+}
 
 .note-preview [contentEditable] {
   outline: none;
