--- a/assets/css/cmps/email-cmps-styels/email-status.css
+++ b/assets/css/cmps/email-cmps-styels/email-status.css
@@ -1,6 +1,6 @@
 .email-status{
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 }
 .email-status-btn{
 	color: white;
@@ -21,18 +21,30 @@
 
 .email-status .add-email {
     background-color: #188fff;
+	padding: 11.5px;
+    margin-bottom: 0px;
 	border-radius:1px;
-	margin-bottom: 10px;
-	border:1px solid #631277;
+	/* border:1px solid #w; */
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
 	font-family:Arial;
 	font-size:13px;
-	padding:6px 24px;
 	text-decoration:none;
 	text-shadow:0px 1px 0px #154682;
 }
 .email-status .add-email:hover {
 	box-shadow: 4px 4px 4px -1px rgba(0,0,0,0.5);
 }
+
+@media (min-width: 690px) {
+	.email-status{
+		flex-direction: column;
+	}
+}
+
+/* @media (min-width: 530px) {
+	.email-status{
+		flex-direction: column;
+	}
+} */
