--- a/assets/css/pages/keep/CreateNote.css
+++ b/assets/css/pages/keep/CreateNote.css
@@ -3,12 +3,15 @@
   padding: 0.5rem 0;
   background-color: #fff;
   flex-direction: column;
-  border-radius: 8px;
+  border-radius: 2px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
   box-shadow: 0 0 5px #7a7a7a;
   justify-content: space-between;
 }
 
 .note-create input {
+flex-grow: 1;
   outline: none;
   border: none;
   padding-left: 10px;
@@ -17,6 +20,7 @@
 }
 
 .note-create button {
+  margin-right: 5px;
   color: #777;
   background-color: white;
   outline: none;
