--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,7 @@
 
 /* Cmps */
 
+@import './cmps/book-app.css';
 @import './cmps/book-list.css';
 @import './cmps/book-preview.css';
 @import './cmps/book-filter.css';
@@ -34,11 +35,3 @@
 @import './pages/keep/NoteColorPalette.css';
 @import './pages/keep/NotePreview.css';
 
-
-
-
-/* @import '../../apps/Keep/assets/NoteApp.css';
-@import '../../apps/Keep/assets/CreateNote.css';
-@import '../../apps/Keep/assets/NoteList.css';
-@import '../../apps/Keep/assets/NotePreview.css';
-@import '../../apps/Keep/assets/NoteColorPalette.css'; */
