--- a/assets/css/pages/book-details.css
+++ b/assets/css/pages/book-details.css
@@ -2,15 +2,22 @@
     background-color: rgba(255, 255, 255, 0.25);
     text-align: left;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 5px;
     padding: 20px;
     align-items: left;
     justify-content: flex-end;
 }
 
+.info-container{
+    display: flex;
+    flex-direction: row;
+}
+
 .book-details .img-container {
-    max-width: 500px;
+    height: 100%;
+    max-height: 500px;
+    height: auto;
 }
 .book-details .red{
     color: red;
@@ -28,18 +35,20 @@ text-overflow: ellipsis;
 
 .book-controler-container{
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
 }
 
 
 
 .book-controler{
+
 background-color: rgba(255, 255, 255, 0.25);
 }
 
 
 
 .reviews{
+
     height: 20%;
     width: 100%;
     background-color: rgba(255, 255, 255, 0.75);
