--- a/assets/css/cmps/email-cmps-styels/email-filter.css
+++ b/assets/css/cmps/email-cmps-styels/email-filter.css
@@ -1,10 +1,11 @@
 .email-filter {
     display: flex;
     justify-content: left;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: #9572bd;
     padding: 5px;
     min-height: 35.5px;
+    flex-wrap: wrap;
 }
 
 .email-filter form {
@@ -51,17 +52,9 @@
     margin-right: 5px;
 }
 
-.email-sort{
+.email-sort {
     display: flex;
     flex-direction: column;
-flex-wrap: nowrap;}
-
-@media (min-width: 690px) {
-    .email-status {
-        flex-wrap: wrap;
-    }
-
-    .email-sort{
-        flex-direction: row;
-    }
+    flex-wrap: wrap;
 }
+
