--- a/assets/css/pages/keep/cmps/home.css
+++ b/assets/css/pages/keep/cmps/home.css
@@ -14,377 +14,7 @@
   margin-bottom: 10px;
 }
 
-.vectorArt{
-  position:relative;
-  width:600px;
-  height:500px;
-  margin:121px auto;
- overflow:hidden;
+.home .img{
+  position: absolute;
+width: 100vh;
 }
-.sol{
-  position:absolute;
-  width:95px;
-  height:95px;
-  border-radius:100%;
- background: #fcdb76;
-  margin:63px 70px;
-
-}
-.cerros{
-  position:absolute;
-  margin:30px 212px
-}
-.c1{
-  position:absolute;
-  width: 0;
-  height: 0;
-  border-top: 50px solid transparent;
-  border-right: 90px solid #385B6B;
-  border-bottom: 50px solid transparent;;
-  margin:172px 162px
-}
-.c1::before{
-  content:"";
-  position:absolute;
- width:30px;
-  height:21px;
-  background:#385B6B;
-  margin:-49px 88px
-}
-.c1::after{
-  content:"";
-  position:absolute;
-  width: 0;
-  height: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-bottom: 50px solid #385B6B;
-  margin:-60px 65px
-}
-.c2{
-  position:absolute;
-  border-bottom: 50px solid #0D4D6B;
-  border-left: 12px solid transparent;
-  border-right: 12px solid transparent;
-  height: 0;
-  width: 5px;
-  margin:212px 241px
-}
-.c2::before{
-  content:"";
-  position:absolute;
-  border-bottom: 21px solid #0D4D6B;
-  border-left: 12px solid transparent;
-  border-right: 12px solid transparent;
-  height: 0;
-  width: 30px;
-  margin:-7px -7px
-}
-.c2::after{
-  content:"";
-  position:absolute;
-  width: 0;
-  height: 0;
-  border-top: 50px solid transparent;
-  border-right: 90px solid #0D4D6B;
-  border-bottom: 50px solid transparent;;
-  margin:-30px 12px
-}
-.c3{
-  position:absolute;
-  border-bottom: 70px solid #0D4D6B;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  height: 0;
-  width: 50px;
-  margin:192px 251px
-}
-.c3::before{
-  content:"";
-  position:absolute;
-  width: 0;
-  height: 0;
-  border-left: 50px solid transparent;
-  border-right: 50px solid transparent;
-  border-bottom: 70px solid #0D4D6B;
-  margin:-30px 12px
-}
-
-.bird{
-  position:absolute;
-  margin:95px -300px;
-  -webkit-animation:volar 12s linear infinite;
-          animation:volar 12s linear infinite;
-}
-.bird5{
-  position:absolute;
-  margin:90px -330px;
-  -webkit-animation:volar3 12s linear infinite;
-          animation:volar3 12s linear infinite;
-}
-.bird3{
-  position:absolute;
-  transform:scale(.35)
-}
-.bird7{
-  position:absolute;
-  transform:scale(.3)
-}
-.head{
-  position:absolute;
-  width:25px;
-  height:25px;
-  border-radius:90px 90px 0;
-  background:white;
-  transform:rotate(-45deg);
-  margin:102px 291px
-}
-.ojo{
-  position:absolute;
-  width:5px;
-  height:5px;
-  border-radius:100%;
-  background:black;
-  margin:12px 14px
-}
-.boca{
-  position:absolute;
-  width: 0;
-  height: 0;
-  border-top: 5px solid transparent;
-  border-left: 7px solid #FFAE44;
-  border-bottom: 7px solid transparent;
-  transform:rotate(45deg);
-  margin:17px 21px
-}
-.body{
-  position:absolute;
-  width: 65px;
-  height: 150px;
-  border-bottom: 12px solid white;
-  border-left: 12px solid transparent;
-  border-right: 12px solid transparent;
-  border-radius: 90px / 100px;
-  margin:-30px 231px
-}
-.body::before{
-  content:"";
-  position:absolute;
-  width:55px;
-  height:30px;
-  border-radius: 0 0 70px 70px;
-  background:white;
-  margin:150px 0
-}
-.ala{
-  position:absolute;
-  width:30px;
-  height:50px;
-  background:white;
-  border-radius:0px 112px 0px 112px;
-  transform-origin:center bottom;
-  margin:80px 251px;
-  -webkit-animation:rotar 3s alternate infinite;
-          animation:rotar 3s alternate infinite;
- }
-.ala3{
-  position:absolute;
-  width:30px;
-  height:50px;
-  background:#ccc;
-  border-radius:0px 112px 0px 112px;
-  transform-origin:center bottom;
-  margin:80px 241px;
-  -webkit-animation:rotar 3s alternate infinite;
-          animation:rotar 3s alternate infinite;
- }
-.cola{
-  position:absolute;
-  width:30px;
-  height:30px;
-  border-radius: 0px 70px 0px 70px;
-  background:white;
-  margin:90px 221px;
-  transform:rotate(-12deg)
-}
-.cola::before{
-  content:"";
-  position:absolute;
-  width:30px;
-  height:30px;
-  border-radius: 0px 70px 0px 70px;
-  background:white;
-  margin:0px 3px;
-  transform:rotate(50deg)
-}
-.cola::after{
-  content:"";
-  position:absolute;
-  width:30px;
-  height:30px;
-  border-radius: 0px 70px 0px 70px;
-  background:white;
-  margin:12px -3px;
-  transform:rotate(-30deg)
-}
-.sea{
-  position:absolute;
-  width:600px;
-  height:251px;
- background-image: linear-gradient(to top, #6f86d6 0%,  #48c6ef 100%);
-  margin:252px 0px;
-  }
-
-.velero{
-  position:absolute;
-  border-top: 21px solid #d12956;
-  border-left: 9px solid transparent;
-  border-right: 9px solid transparent;
-  height: 0;
-  width: 70px;
-  margin:400px 470px;
-  -webkit-animation: nave 30s linear infinite;
-          animation: nave 30s linear infinite;
-  z-index:999;
-  
-  
-  
-}
-.velero::before{
-    content:"";
-    display:block;
-    width: 0;
-    height: 0;
-    border-bottom: 90px solid #003554;
-    border-right: 21px solid transparent;
-    margin:-112px 40px;
-}
-.velero::after{
-    content:"";
-    display:block;
-    width:77px;
-    height:53px;
-    border-radius: 121px 121px  0 0;
-    background:white;
-    transform: rotate(-90deg);
-    margin:47px -25px;
-}
-.rastro{
-    position:absolute;
-    width: 0;
-    height: 0;
-    border-top: 8px solid transparent;
-    border-right: 90px solid rgba(255,255,255,.3);
-    border-bottom: 9px solid transparent;
-    margin:121px 63px;
-    -webkit-animation: nave3 9s alternate infinite;
-            animation: nave3 9s alternate infinite;
-}
-
-@-webkit-keyframes rotar{
-  0%{transform:rotatez(0deg) rotatey(0deg) }
-  100%{transform:rotatez(132deg) rotatey(152deg) }
-}
-
-@keyframes rotar{
-  0%{transform:rotatez(0deg) rotatey(0deg) }
-  100%{transform:rotatez(132deg) rotatey(152deg) }
-}
-@-webkit-keyframes volar{
-  0%{transform:translatex(-30px) translatey(0px)}
-  25%{transform:translatex(231px) translatey(12px)}
-  30%{transform:translatex(300px) translatey(-30px)}
-  40%{transform:translatex(400px) translatey(12px)}
-  50%{transform:translatex(500px) translatey(-21px)}
-  60%{transform:translatex(600px) translatey(21px)}
-  70%{transform:translatex(700px) translatey(0px)}
-  80%{transform:translatex(800px) translatey(-9px)}
-  90%{transform:translatex(900px) translatey(9px)}
-  100%{transform:translatex(1052px) translatey(0px)}
-}
-@keyframes volar{
-  0%{transform:translatex(-30px) translatey(0px)}
-  25%{transform:translatex(231px) translatey(12px)}
-  30%{transform:translatex(300px) translatey(-30px)}
-  40%{transform:translatex(400px) translatey(12px)}
-  50%{transform:translatex(500px) translatey(-21px)}
-  60%{transform:translatex(600px) translatey(21px)}
-  70%{transform:translatex(700px) translatey(0px)}
-  80%{transform:translatex(800px) translatey(-9px)}
-  90%{transform:translatex(900px) translatey(9px)}
-  100%{transform:translatex(1052px) translatey(0px)}
-}
-@-webkit-keyframes volar3{
-  0%{transform:translatex(-30px) translatey(0px)}
-  25%{transform:translatex(321px) translatey(-30px)}
-  30%{transform:translatex(400px) translatey(30px)}
-  40%{transform:translatex(450px) translatey(-12px)}
-  50%{transform:translatex(550px) translatey(33px)}
-  60%{transform:translatex(630px) translatey(-33px)}
-  70%{transform:translatex(750px) translatey(9px)}
-  80%{transform:translatex(850px) translatey(33px)}
-  90%{transform:translatex(930px) translatey(-33px)}
-  100%{transform:translatex(1052px) translatey(-9px)}
-}
-@keyframes volar3{
-  0%{transform:translatex(-30px) translatey(0px)}
-  25%{transform:translatex(321px) translatey(-30px)}
-  30%{transform:translatex(400px) translatey(30px)}
-  40%{transform:translatex(450px) translatey(-12px)}
-  50%{transform:translatex(550px) translatey(33px)}
-  60%{transform:translatex(630px) translatey(-33px)}
-  70%{transform:translatex(750px) translatey(9px)}
-  80%{transform:translatex(850px) translatey(33px)}
-  90%{transform:translatex(930px) translatey(-33px)}
-  100%{transform:translatex(1052px) translatey(-9px)}
-}
-@-webkit-keyframes brillo{
-  0%{opacity:1}
-   100%{opacity:0.3}
-}
-@keyframes brillo{
-  0%{opacity:1}
-   100%{opacity:0.3}
-}
-@-webkit-keyframes brillo3{
-  0%{opacity:0.3}
-   100%{opacity:1}
-}
-@keyframes brillo3{
-  0%{opacity:0.3}
-   100%{opacity:1}
-}
-
-@-webkit-keyframes nave{
-  0% {transform:translateX(0px) }
-  100% {transform:translateX(-670px) }
-}
-
-@keyframes nave{
-  0% {transform:translateX(0px) }
-  100% {transform:translateX(-670px) }
-}
-@-webkit-keyframes nave3{
-   0% {
-    width: 0;
-    height: 0;
-    border-top: 8px solid transparent;
-    border-right: 90px solid rgba(255,255,255,.3);
-    border-bottom: 9px solid transparent;}
-  100% {
-    width: 0;
-    height: 0;
-    border-top: 8px solid transparent;
-    border-right: 70px solid rgba(255,255,255,.12);}}
-@keyframes nave3{
-   0% {
-    width: 0;
-    height: 0;
-    border-top: 8px solid transparent;
-    border-right: 90px solid rgba(255,255,255,.3);
-    border-bottom: 9px solid transparent;}
-  100% {
-    width: 0;
-    height: 0;
-    border-top: 8px solid transparent;
-    border-right: 70px solid rgba(255,255,255,.12);}}
