--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -1,10 +1,15 @@
 *{
     box-sizing: border-box;
+
+}
+
+.scroller{
+    scrollbar-width: none;
 }
 
 body {
     background:linear-gradient(270deg, #410093, #735b91);
-        background-size: 100%;
+    background-size: 100%;
     font-family: lato, sans-serif;
     color: white;
     /* margin: 0%; */
@@ -28,11 +33,20 @@ a {
     color: inherit;
 }
 
-img {
+/* img {
     height: 100%;
     width: 100%;
     object-fit: cover;
-}
+} */
 textarea {
     resize: none;
   }
+
+footer{
+    position: relative;
+    padding: 10px 10px 0px 10px;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
+    background: grey;
+}
