day 5 last commit

--- a/assets/css/basics/base.css
+++ b/assets/css/basics/base.css
@@ -7,6 +7,10 @@
     scrollbar-width: none;
 }
 
+.example::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     background:linear-gradient(270deg, #410093, #735b91);
     background-size: 100%;
